# utf8-read-rs

./: .gitignore  Cargo.toml  README.md  RELEASES.md
src/: lib.rs  reader.rs  stream_position.rs  types.rs
tests/: string.rs  targeted.rs
tests/utils/: mod.rs  stop_start.rs
